--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
     - name: Download AndroidModLoader`s mod template...
       uses: wei/wget@v1
       with:
-        args: -O ./AML_src.zip https://github.com/AndroidModLoader/AndroidModLoader/archive/refs/tags/1.0.0.2.zip
+        args: -O ./AML_src.zip https://github.com/RusJJ/AndroidModLoader/archive/refs/heads/main.zip
 
     - name: Install AndroidModLoader`s mod template...
       run: |
         unzip ./AML_src.zip
-        mv ./AndroidModLoader-1.0.0.2/mod ./mod
+        mv ./AndroidModLoader-main/mod ./mod
 
     - name: Install Android NDK (r25c)...
       uses: nttld/setup-ndk@v1.2.0
